<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/snow"
    tools:context="pt.novaleaf.www.maisverde.RegisterActivity">


    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:srcCompat="@mipmap/ic_novaleaf_foreground" />


            <android.support.design.widget.TextInputLayout
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp">

                <AutoCompleteTextView
                    android:id="@+id/input_usrnamename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/charcoal"
                    android:theme="@style/InputTextCustom" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp">

                <AutoCompleteTextView
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/charcoal"
                    android:theme="@style/InputTextCustom" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp">

                <AutoCompleteTextView
                    android:id="@+id/input_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/confirm_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/charcoal"
                    android:theme="@style/InputTextCustom" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp">

                <AutoCompleteTextView
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/charcoal"
                    android:theme="@style/InputTextCustom" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_signup"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/registar"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

